# optest

./: .gitignore  README.md  pyproject.toml
docs/: ascend_samples_with_optest.md  op_tester_architecture.md  op_tester_design_plan.md  optest_architecture.md  optest_design_plan.md  optest_todos.md  package_and_publish.md
examples/: README.md
examples/ascend_add/: .gitignore
examples/ascend_add/add_kernel/: run.sh
examples/ascend_operator/: README.md  plan.yaml
examples/ascend_operator/operator/: CMakeLists.txt  build.sh  op_runner.cpp
examples/custom_op_with_plugins/: .gitignore  README.md  custom_impl.py  custom_plugins.py  plan.yaml  plan_failure.yaml  plugin.py
examples/custom_op_with_plugins/operator/: CMakeLists.txt  build.sh  op_runner.cpp  wrong_impl.py
examples/matmul_cpp/: .gitignore  README.md  plan.yaml
examples/matmul_cpp/operator/: CMakeLists.txt  build.sh  matmul_kernel.cpp  matmul_kernel.h  matmul_runner.cpp
examples/op_cpp/: README.md  plan.yaml
examples/op_plugin/: README.md  __init__.py  plan.yaml  run.py
examples/operator_cpp/: README.md
examples/vector_add/: fail_run.py  plan.yaml  run.py
src/op_tester/: __init__.py
src/op_tester/backends/: ascend.py  base.py  stub.py
src/op_tester/cli/: __init__.py  main.py
src/op_tester/core/: comparator.py  models.py  references.py  results.py  runner.py
src/op_tester/generators/: __init__.py  base.py
src/op_tester/operators/: __init__.py
src/op_tester/plans/: loader.py  types.py
src/op_tester/registry/: __init__.py  builtins.py  registry.py
src/op_tester/reporting/: __init__.py  base.py  json_reporter.py  schema.py  terminal.py
src/op_tester/utils/: __init__.py
src/optest/: __init__.py
src/optest/backends/: __init__.py  ascend.py  base.py  cann.py  stub.py
tests/: conftest.py  test_backends.py  test_catalog_builtins.py  test_cli.py  test_comparator.py  test_matmul_cpp_example.py  test_plan_loader.py  test_plan_runner.py  test_plan_schema_errors.py  test_plan_v2_runner.py  test_reference_impls.py  test_registry_builtins.py  test_reporting.py  test_runner.py
(+28 files in other folders)
