[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optest"
version = "0.1.0"
description = "CLI framework for validating AI operators across GPU/NPU targets"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
  {name = "optest", email = "devnull@example.com"},
]
keywords = ["ai", "testing", "operators", "cuda", "npu"]
dependencies = [
  "click>=8.1",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "colorama>=0.4",
  "jsonschema>=4.0",
]

[project.urls]
"Source" = "https://example.com/optest"

[project.scripts]
"optest" = "optest.cli.main:main"
